k8s/insurance-namespace/insurance-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insurance-service-ingress
  namespace: insurance
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /insurance
        pathType: Prefix
        backend:
          service:
            name: insurance-service
            port:
              number: 9018
